@@ -1,39 +1,108 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:minWidth="300px" android:layout_width="fill_parent"
-	android:orientation="vertical" android:id="@+id/itemRoot"
-	android:paddingLeft="20dip" android:paddingRight="20dip"
-	android:layout_marginLeft="10dip" android:layout_marginRight="10dip">
-	<TextView android:layout_width="fill_parent"
-		android:layout_height="wrap_content" android:textStyle="bold"
-		android:text="Hours">
-	</TextView>
-	<EditText android:text="0" android:id="@+id/txtHours"
-		android:layout_width="fill_parent" android:layout_height="wrap_content"
-		android:visibility="visible" android:freezesText="true">
-	</EditText>
-	<TextView android:layout_width="fill_parent"
-		android:layout_height="wrap_content" android:layout_weight="1"
-		android:textStyle="bold" android:text="Minutes">
-	</TextView>
-	<EditText android:text="12" android:id="@+id/txtMinutes"
-		android:layout_width="fill_parent" android:layout_height="wrap_content"
-		android:visibility="visible" android:freezesText="true">
-	</EditText>
-	<TextView android:layout_width="fill_parent"
-		android:layout_height="wrap_content" android:layout_weight="1"
-		android:textStyle="bold" android:text="Seconds">
-	</TextView>
-	<EditText android:text="34" android:id="@+id/txtSeconds"
-		android:layout_width="fill_parent" android:layout_height="wrap_content"
-		android:visibility="visible" android:freezesText="true">
-	</EditText>
-	<TextView android:layout_width="fill_parent"
-		android:layout_height="wrap_content" android:layout_weight="1"
-		android:textStyle="bold" android:text="Update Mode">
-	</TextView>
-	<Spinner android:layout_width="wrap_content"
-		android:layout_height="wrap_content" android:id="@+id/spnUpdateMode"
-		android:text="12:34">
-	</Spinner>
+              android:minWidth="300dp"
+              android:layout_width="fill_parent"
+              android:orientation="vertical"
+              android:id="@+id/itemRoot"
+              android:paddingLeft="20dip"
+              android:paddingRight="20dip"
+              android:layout_marginLeft="10dip"
+              android:layout_marginRight="10dip"
+              android:layout_height="wrap_content">
+
+    <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:text="@string/setmediaclocktimer_startTime"/>
+
+    <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+        <EditText
+                android:text="@string/setmediaclocktimer_startTimeHoursDefault"
+                android:id="@+id/setmediaclocktimer_startTimeHours"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:visibility="visible"
+                android:freezesText="true"
+                android:inputType="time"/>
+
+        <EditText
+                android:text="@string/setmediaclocktimer_startTimeMinutesDefault"
+                android:id="@+id/setmediaclocktimer_startTimeMinutes"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:visibility="visible"
+                android:freezesText="true"
+                android:inputType="time"/>
+
+        <EditText
+                android:text="@string/setmediaclocktimer_startTimeSecondsDefault"
+                android:id="@+id/setmediaclocktimer_startTimeSeconds"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:visibility="visible"
+                android:freezesText="true"
+                android:inputType="time"/>
+    </LinearLayout>
+
+    <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:text="@string/setmediaclocktimer_endTime"/>
+
+    <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+        <EditText
+                android:text="@string/setmediaclocktimer_endTimeHoursDefault"
+                android:id="@+id/setmediaclocktimer_endTimeHours"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:visibility="visible"
+                android:freezesText="true"
+                android:inputType="time"/>
+
+        <EditText
+                android:text="@string/setmediaclocktimer_endTimeMinutesDefault"
+                android:id="@+id/setmediaclocktimer_endTimeMinutes"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:visibility="visible"
+                android:freezesText="true"
+                android:inputType="time"/>
+
+        <EditText
+                android:text="@string/setmediaclocktimer_endTimeSecondsDefault"
+                android:id="@+id/setmediaclocktimer_endTimeSeconds"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:visibility="visible"
+                android:freezesText="true"
+                android:inputType="time"/>
+    </LinearLayout>
+
+    <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:textStyle="bold"
+            android:text="@string/setmediaclocktimer_updateMode"/>
+
+    <Spinner
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/setmediaclocktimer_spnUpdateMode"/>
 </LinearLayout>
