@@ -243,6 +243,16 @@
     <string name="alertManeuver_ttsChunks">TTSChunks (comma-separated)</string>
     <string name="alertManeuver_ttsChunksDefault">TTSChunk1,TTSChunk2,AnotherTTSChunk</string>
 
+    <string name="setmediaclocktimer_startTime">Start Time</string>
+    <string name="setmediaclocktimer_startTimeHoursDefault">0</string>
+    <string name="setmediaclocktimer_startTimeMinutesDefault">12</string>
+    <string name="setmediaclocktimer_startTimeSecondsDefault">34</string>
+    <string name="setmediaclocktimer_endTime">End Time</string>
+    <string name="setmediaclocktimer_endTimeHoursDefault">11</string>
+    <string name="setmediaclocktimer_endTimeMinutesDefault">22</string>
+    <string name="setmediaclocktimer_endTimeSecondsDefault">33</string>
+    <string name="setmediaclocktimer_updateMode">Update Mode</string>
+
     <string name="exit_dialog_title">Exit Application</string>
     <string name="app_setup_dialog_title">Please set up application properties</string>
     <string name="nsd_use_label">Network Service Discovery:</string>
